--- a/ng2-components/ng2-activiti-tasklist/package.json
+++ b/ng2-components/ng2-activiti-tasklist/package.json
@@ -67,6 +67,7 @@
     "ng2-activiti-form": "1.3.0",
     "ng2-alfresco-core": "1.3.0",
     "ng2-alfresco-datatable": "1.3.0",
+    "ng2-alfresco-documentlist": "1.3.0",
     "ng2-translate": "2.5.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.0.0-beta.12",
